build/log/idf_py_stderr_output_75454
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void mcpwm_example_gpio_initialize()':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:55:21: error: 'MCPWM_UNIT_0' was not declared in this scope
   55 |     mcpwm_gpio_init(MCPWM_UNIT_0, MCPWM0A, 13
      |                     ^~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:55:35: error: 'MCPWM0A' was not declared in this scope
   55 |     mcpwm_gpio_init(MCPWM_UNIT_0, MCPWM0A, 13
      |                                   ^~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:55:5: error: 'mcpwm_gpio_init' was not declared in this scope
   55 |     mcpwm_gpio_init(MCPWM_UNIT_0, MCPWM0A, 13
      |     ^~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void mcpwm_example_servo_control(void*)':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:84:5: warning: missing initializer for member 'mcpwm_timer_config_t::count_mode' [-Wmissing-field-initializers]
   84 |     };
      |     ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:84:5: warning: missing initializer for member 'mcpwm_timer_config_t::period_ticks' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:84:5: warning: missing initializer for member 'mcpwm_timer_config_t::intr_priority' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:84:5: warning: missing initializer for member 'mcpwm_timer_config_t::flags' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:87:5: error: 'mcpwm_operator_handle_t' was not declared in this scope; did you mean 'mcpwm_oper_handle_t'?
   87 |     mcpwm_operator_handle_t operator = NULL;
      |     ^~~~~~~~~~~~~~~~~~~~~~~
      |     mcpwm_oper_handle_t
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:90:5: warning: missing initializer for member 'mcpwm_operator_config_t::intr_priority' [-Wmissing-field-initializers]
   90 |     };
      |     ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:90:5: warning: missing initializer for member 'mcpwm_operator_config_t::flags' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:91:51: error: expected type-specifier before ')' token
   91 |     mcpwm_new_operator(&operator_config, &operator);
      |                                                   ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:92:42: error: 'operator,' not defined
   92 |     mcpwm_operator_connect_timer(operator, timer);
      |                                          ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:94:5: error: 'mcpwm_comparator_handle_t' was not declared in this scope; did you mean 'mcpwm_comparator_config_t'?
   94 |     mcpwm_comparator_handle_t comparator = NULL;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
      |     mcpwm_comparator_config_t
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:96:9: error: expected primary-expression before '.' token
   96 |         .flags.update_cmp_on_tep = true,
      |         ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:98:34: error: 'operator,' not defined
   98 |     mcpwm_new_comparator(operator, &comparator_config, &comparator);
      |                                  ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:98:57: error: 'comparator' was not declared in this scope
   98 |     mcpwm_new_comparator(operator, &comparator_config, &comparator);
      |                                                         ^~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:100:5: error: 'mcpwm_generator_handle_t' was not declared in this scope; did you mean 'mcpwm_generator_config_t'?
  100 |     mcpwm_generator_handle_t generator = NULL;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
      |     mcpwm_generator_config_t
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:103:5: warning: missing initializer for member 'mcpwm_generator_config_t::flags' [-Wmissing-field-initializers]
  103 |     };
      |     ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:104:33: error: 'operator,' not defined
  104 |     mcpwm_new_generator(operator, &generator_config, &generator);
      |                                 ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:104:55: error: 'generator' was not declared in this scope
  104 |     mcpwm_new_generator(operator, &generator_config, &generator);
      |                                                       ^~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:108:5: warning: missing initializer for member 'mcpwm_timer_event_callbacks_t::on_full' [-Wmissing-field-initializers]
  108 |     };
      |     ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:108:5: warning: missing initializer for member 'mcpwm_timer_event_callbacks_t::on_stop' [-Wmissing-field-initializers]
In file included from /home/vicenterey/esp/idf/esp-idf/components/esp_driver_mcpwm/include/driver/mcpwm_prelude.h:17,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:8:
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:119:26: error: 'MCPWM_TIMER_EVENT_TEP' was not declared in this scope; did you mean 'MCPWM_TIMER_EVENT_FULL'?
  119 |                 .event = MCPWM_TIMER_EVENT_TEP,
      |                          ^~~~~~~~~~~~~~~~~~~~~
/home/vicenterey/esp/idf/esp-idf/components/esp_driver_mcpwm/include/driver/mcpwm_gen.h:135:55: note: in definition of macro 'MCPWM_GEN_COMPARE_EVENT_ACTION'
  135 |     (mcpwm_gen_compare_event_action_t) { .direction = dir, .comparator = cmp, .action = act }
      |                                                       ^~~
/home/vicenterey/esp/idf/esp-idf/components/esp_driver_mcpwm/include/driver/mcpwm_gen.h:135:38: error: expected primary-expression before ')' token
  135 |     (mcpwm_gen_compare_event_action_t) { .direction = dir, .comparator = cmp, .action = act }
      |                                      ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:118:68: note: in expansion of macro 'MCPWM_GEN_COMPARE_EVENT_ACTION'
  118 |             mcpwm_generator_set_action_on_compare_event(generator, MCPWM_GEN_COMPARE_EVENT_ACTION({
      |                                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:123:26: error: 'MCPWM_TIMER_EVENT_TEZ' was not declared in this scope; did you mean 'MCPWM_TIMER_EVENT_FULL'?
  123 |                 .event = MCPWM_TIMER_EVENT_TEZ,
      |                          ^~~~~~~~~~~~~~~~~~~~~
/home/vicenterey/esp/idf/esp-idf/components/esp_driver_mcpwm/include/driver/mcpwm_gen.h:135:55: note: in definition of macro 'MCPWM_GEN_COMPARE_EVENT_ACTION'
  135 |     (mcpwm_gen_compare_event_action_t) { .direction = dir, .comparator = cmp, .action = act }
      |                                                       ^~~
/home/vicenterey/esp/idf/esp-idf/components/esp_driver_mcpwm/include/driver/mcpwm_gen.h:135:38: error: expected primary-expression before ')' token
  135 |     (mcpwm_gen_compare_event_action_t) { .direction = dir, .comparator = cmp, .action = act }
      |                                      ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:122:68: note: in expansion of macro 'MCPWM_GEN_COMPARE_EVENT_ACTION'
  122 |             mcpwm_generator_set_action_on_compare_event(generator, MCPWM_GEN_COMPARE_EVENT_ACTION({
      |                                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
